--- a/templates/demand/fragments/demand_table.html
+++ b/templates/demand/fragments/demand_table.html
@@ -31,7 +31,7 @@
         <img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%"><br>
     {% endif %}
 
-    <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries.count }} entries)</span>
+    <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
     <ul class="pagination center">
         {% if page_obj.has_previous %}
             <li class="waves-effect"><a hx-post="{% url 'demand' %}?page={{ page_obj.previous_page_number }}" hx-target="#demand-table" hx-swap="morph"><i class="material-icons">chevron_left</i></a></li>
