--- a/templates/dayTemplates/fragments/create_day_template.html
+++ b/templates/dayTemplates/fragments/create_day_template.html
@@ -1,34 +1,25 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - Create day template{% endblock %}
-
-{% block content %}
-    {% if user.is_authorized %}
-        <h3 class="light-blue-text text-darken-1">Create day template</h3>
-        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'day_templates' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
-        <div class="card">
-            <form method="POST" action="{% url 'create_day_template' %}">
-                {% csrf_token %}
-                <div class="card-content">
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">label</i>
-                            <label for="id_name">Name</label>
-                            <input type="text" name="name" autofocus autocapitalize="none" maxlength="30" required id="id_name" class="grey-text text-darken-4">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">local_offer</i>
-                            <label for="id_description">Description</label>
-                            <textarea name="description" autocapitalize="none" id="id_description" class="materialize-textarea grey-text text-darken-4"></textarea>
-                        </div>
-                    </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">add</i>Create day template</button>
+<div id="add-modal">
+    <form hx-post="{% url 'create_day_template' %}" hx-target="#day-template-table" hx-swap="morph">
+        <div class="modal-content card-color">
+            <h5 class="header-color-text"><b>Create Day template</b></h5>
+            {% csrf_token %}
+            <div class="row" style="gap: 1em">
+                <div class="s6 input-field">
+                    <i class="material-icons prefix">label</i>
+                    <input id="id_name" name="name" type="text" autofocus autocapitalize="none" maxlength="30" placeholder=" " required>
+                    <label for="id_name">*Name</label>
                 </div>
-            </form>
+            </div><br>
+            <div class="row" style="gap: 1em">
+                <div class="s12 input-field">
+                    <i class="material-icons prefix">local_offer</i>
+                    <textarea id="id_description" name="description" autocapitalize="none" class="materialize-textarea" placeholder=" "></textarea>
+                    <label for="id_description">Description</label>
+                </div>
+            </div>
         </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+        <div class="modal-footer header-color" style="margin-top: 10%">
+            <button type="submit" class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#add-modal')).close();"><i class="material-icons left">add</i>Create Day template</button>
+        </div>
+    </form>
+</div>
