--- a/templates/dayTemplates/fragments/day_template_detail.html
+++ b/templates/dayTemplates/fragments/day_template_detail.html
@@ -1,105 +1,120 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - {{ selected_day_template.name }} details{% endblock %}
+<div id="view-modal-content">
+    <script>
+        var paste_modal = document.querySelector('#paste-modal');
+        var modal_instance1 = M.Modal.init(paste_modal);
+        var add_modal = document.querySelector('#add-shift-template-modal');
+        var modal_instance2 = M.Modal.init(add_modal);
 
-{% block content %}
-    {% if user.is_authorized %}
-        <div id="delete-modal" class="modal content-section red darken-1 white-text">
-            <div class="modal-content">
-                <h5><b>Delete {{ selected_day_template }}</b></h5>
-                <p>Are you sure you really want to delete {{ selected_day_template }}?</p>
-            </div>
-            <div class="modal-footer">
-                <a class="modal-close waves-effect waves-light btn-flat red darken-1 white-text"><i class="material-icons left">close</i>Abort and close</a>
-                <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'delete_day_template' selected_day_template.id %}"><i class="material-icons left">delete_forever</i>Yes, delete</a>
-            </div>
+        var picker_elems = document.querySelectorAll('.datepicker');
+        var picker_instances = M.Datepicker.init(picker_elems, {
+            format: 'yyyy-mm-dd',
+            firstDay: 1,
+            showClearBtn: true
+        });
+    </script>
+
+    <div id="add-shift-template-modal" class="modal content-section card-color">
+        <div class="modal-content">
+            <h5 class="header-color-text"><b>Add Shift template</b></h5>
+            <table class="striped highlight responsive-table">
+                <thead class="header-color white-text">
+                    <tr>
+                        <th>Name</th>
+                        <th>Start<br>End</th>
+                        <th>Work hours<br>Break</th>
+                        <th>Department<br>Qualifications</th>
+                        <th>Note</th>
+                        <th>Assign</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for entry in non_associated_shift_templates %}
+                        <tr>
+                            <td><b>{{ entry.name }}</b></td>
+                            <td><b>{{ entry.start_time|date:"H:i" }}</b><br><b>{{ entry.end_time|date:"H:i" }}</b></td>
+                            <td>{{ entry.get_work_hours|date:"H:i" }}<br><span class="grey-text text-darken-1">{{ entry.break_duration|date:"H:i" }}</span></td>
+                            <td>
+                                {{ entry.department }}<br>
+                                {% for qualification in entry.get_qualifications %}
+                                    <span class="new badge grey darken-1 white-text z-depth-1" data-badge-caption="">
+                                        <b>{{ qualification.qualification.name }}</b>
+                                    </span>
+                                {% endfor %}
+                            </td>
+                            <td>{{ entry.note }}</td>
+                            <td><a class="waves-effect waves-light btn accent-color" hx-get="{% url 'add_shift_template' selected_day_template.id entry.id %}" hx-target="#view-modal-content" hx-swap="morph" onclick="M.Modal.getInstance(document.querySelector('#add-shift-template-modal')).close();"><i class="material-icons">add</i></a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
+    </div>
 
-        <h3 class="light-blue-text text-darken-1">{{ selected_day_template.name }} details</h3>
-        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'day_templates' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
-        <div class="card">
-            <div class="card-content">
-                <div class="row">
-                    <div class="input-field col s4">
-                        <i class="material-icons prefix">label</i>
-                        <label for="id_name">Name</label>
-                        <input type="text" name="name" autofocus autocapitalize="none" maxlength="30" value="{{ selected_day_template.name }}" disabled id="id_name" class="grey-text text-darken-4">
-                        <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
+    <div id="paste-modal" class="modal content-section card-color" style="width: 75%">
+        <form>
+            <div class="modal-content">
+                {% csrf_token %}
+                <h5><b>Paste {{ selected_day_template.name }} to date</b></h5>
+                <div class="row" style="gap: 1em">
+                    <div class="s8 input-field">
+                        <i class="material-icons prefix">event_calendar</i>
+                        <input id="id_to_date" name="to_date" type="text" class="datepicker" required>
+                        <label for="id_to_date">*Date</label>
                     </div>
                 </div>
-                {% if selected_day_template.description != '' %}
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">local_offer</i>
-                            <label for="id_description">Description</label>
-                            <textarea name="description" autocapitalize="none" disabled id="id_description" class="materialize-textarea grey-text text-darken-4">{{ selected_day_template.description }}</textarea>
-                        </div>
-                    </div>
-                {% endif %}
-                <form method="POST" action="{% url 'paste_to_date' selected_day_template.id %}">
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">event_calendar</i>
-                            <input id="id_to_date" name="to_date" type="text" required class="datepicker grey-text text-darken-4">
-                            <label for="id_to_date">Date</label>
-                        </div>
-                        <div class="col s4">
-                            <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">add</i>Paste to date</button>
-                        </div>
-                    </div>
-                </form>
-                <a class="modal-trigger waves-effect waves-light btn-flat red-text text-darken-1" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
+                <p>Pasting the template will result in adding the assigned Shift templates to the selected day as additional shifts.</p>
             </div>
-        </div>
-        <div class="card">
-            <div class="card-content">
-                <div class="card-title"><b>Assigned shift templates</b></div>
-                <table class="striped highlight responsive-table">
-                    <thead class="grey darken-1 white-text">
-                        <tr>
-                            <th>Name</th>
-                            <th>Start</th>
-                            <th>End</th>
-                            <th>Work hours<br>Break</th>
-                            <th>Department<br>Qualifications</th>
-                            <th>Note</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for entry in associated_shift_templates %}
-                            <tr>
-                                <td>
-                                    {{ entry.shift_template.name }}
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.start_time|date:"H:i" }}
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.end_time|date:"H:i" }}
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.get_work_hours|date:"H:i" }}<br>
-                                    <span class="grey-text text-darken-1">{{ entry.shift_template.break_duration|date:"H:i" }}</span>
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.department }}<br>
-                                    {% for qualification in entry.shift_template.get_qualifications %}
-                                        <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
-                                            <b>{{ qualification.qualification.name }}</b>
-                                        </span>
-                                    {% endfor %}
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.note }}
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-                <img class="materialboxed" src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
+            <div class="modal-footer header-color" style="margin-top: 20%">
+                <a class="waves-effect waves-light btn accent-color white-text" onclick="M.Modal.getInstance(document.querySelector('#paste-modal')).close(); M.Modal.getInstance(document.querySelector('#view-modal')).close();" hx-post="{% url 'paste_to_date' selected_day_template.id %}" hx-target="#day-template-table" hx-swap="morph"><i class="material-icons left">content_copy</i>Paste</a>
             </div>
-        </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+        </form>
+    </div>
+
+    <div class="modal-content card-color">
+        <h5><b class="header-color-text">Shift templates for {{ selected_day_template.name }}</b></h5>
+        <br>
+        {% if associated_shift_templates.count > 0 %}
+            <table class="striped highlight responsive-table">
+                <thead class="header-color white-text">
+                <tr>
+                    <th>Name</th>
+                    <th>Start<br>End</th>
+                    <th>Work hours<br>Break</th>
+                    <th>Department<br>Qualifications</th>
+                    <th>Note</th>
+                    <th>Delete</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for entry in associated_shift_templates %}
+                    <tr>
+                        <td><b>{{ entry.shift_template.name }}</b></td>
+                        <td><b>{{ entry.shift_template.start_time|date:"H:i" }}</b><br><b>{{ entry.shift_template.end_time|date:"H:i" }}</b></td>
+                        <td>{{ entry.shift_template.get_work_hours|date:"H:i" }}<br><span class="grey-text text-darken-1">{{ entry.shift_template.break_duration|date:"H:i" }}</span></td>
+                        <td>
+                            {{ entry.shift_template.department }}<br>
+                            {% for qualification in entry.shift_template.get_qualifications %}
+                                <span class="new badge grey darken-1 white-text z-depth-1" data-badge-caption="">
+                                    <b>{{ qualification.qualification.name }}</b>
+                                </span>
+                            {% endfor %}
+                        </td>
+                        <td>{{ entry.shift_template.note }}</td>
+                        <td>
+                            <a class="waves-effect waves-light btn-flat warning-color-text" hx-get="{% url 'remove_shift_template' selected_day_template.id entry.shift_template.id %}" hx-target="#view-modal-content" hx-swap="morph"><i class="material-icons">delete_forever</i></a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <h6><i class="material-icons accent-color-text left">info</i>No Shift templates assigned</h6>
+        {% endif %}
+        <br><br><br><img src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
+    </div>
+    <div class="modal-footer header-color" style="margin-top: 10%">
+        <a class="modal-trigger btn-flat accent-color-text" data-target="paste-modal"><i class="material-icons left">content_copy</i>Paste to date</a>
+        <a class="modal-trigger btn-flat accent-color-text" data-target="add-shift-template-modal"><i class="material-icons left">add</i>Add Shift template</a>
+        <a class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#view-modal')).close();" hx-get="{% url 'day_templates' %}" hx-target="#day-template-table" hx-swap="morph"><i class="material-icons left">update</i>Update view</a>
+    </div>
+</div>
