--- a/templates/dayTemplates/fragments/edit_day_template.html
+++ b/templates/dayTemplates/fragments/edit_day_template.html
@@ -1,154 +1,42 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - Edit day template {{ selected_day_template.name }}{% endblock %}
+<div id="edit-modal-content">
+    <script>
+        var modal_elems = document.querySelector('#delete-modal');
+        var modal_instances = M.Modal.init(modal_elems);
+    </script>
 
-{% block content %}
-    {% if user.is_authorized %}
-        <div id="delete-modal" class="modal content-section red darken-1 white-text">
-            <div class="modal-content">
-                <h5><b>Delete {{ selected_day_template }}</b></h5>
-                <p>Are you sure you really want to delete {{ selected_day_template }}?</p>
-            </div>
-            <div class="modal-footer">
-                <a class="modal-close waves-effect waves-light btn-flat red darken-1 white-text"><i class="material-icons left">close</i>Abort and close</a>
-                <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'delete_day_template' selected_day_template.id %}"><i class="material-icons left">delete_forever</i>Yes, delete</a>
-            </div>
+    <div id="delete-modal" class="modal content-section card-color">
+        <div class="modal-content">
+            <h5><b class="warning-color-text">Delete Day template {{ selected_day_template.name }}</b></h5>
+            <p>Are you sure you really want to delete this entry?</p>
         </div>
-
-        <div id="add-shift-modal" class="modal content-section">
-            <div class="modal-content">
-                <h5 class="light-blue-text text-darken-1"><b>Assign Shift to {{ selected_day_template }}</b></h5>
-                <table class="striped highlight responsive-table">
-                    <thead class="grey darken-1 white-text">
-                        <tr>
-                            <th>Name</th>
-                            <th>Start</th>
-                            <th>End</th>
-                            <th>Work hours<br>Break</th>
-                            <th>Department<br>Qualifications</th>
-                            <th>Note</th>
-                            <th>Assign</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for shift_template in non_associated_shift_templates %}
-                            <tr>
-                                <td>
-                                    {{ shift_template.name }}
-                                </td>
-                                <td>
-                                    {{ shift_template.start_time|date:"H:i" }}
-                                </td>
-                                <td>
-                                    {{ shift_template.end_time|date:"H:i" }}
-                                </td>
-                                <td>
-                                    {{ shift_template.get_work_hours|date:"H:i" }}<br>
-                                    <span class="grey-text text-darken-1">{{ shift_template.break_duration|date:"H:i" }}</span>
-                                </td>
-                                <td>
-                                    {{ shift_template.department }}<br>
-                                    {% for qualification in shift_template.get_qualifications %}
-                                        <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
-                                            <b>{{ qualification.qualification.name }}</b>
-                                        </span>
-                                    {% endfor %}
-                                </td>
-                                <td>
-                                    {{ shift_template.note }}
-                                </td>
-                                <td>
-                                    <a class="waves-effect waves-light btn light-blue darken-1" href="{% url 'add_shift_template' selected_day_template.id shift_template.id %}"><i class="material-icons">add</i></a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
+        <div class="modal-footer header-color">
+            <a class="modal-close waves-effect waves-light btn-flat white-text" onclick="M.Modal.getInstance(document.querySelector('#delete-modal')).close(); M.Modal.getInstance(document.querySelector('#edit-modal')).close();"><i class="material-icons left">close</i>Abort and close</a>
+            <a class="waves-effect waves-light btn warning-color white-text" onclick="M.Modal.getInstance(document.querySelector('#delete-modal')).close(); M.Modal.getInstance(document.querySelector('#edit-modal')).close();" hx-get="{% url 'delete_day_template' selected_day_template.id %}" hx-target="#day-template-table" hx-swap="morph"><i class="material-icons left">delete_forever</i>Yes, delete</a>
         </div>
+    </div>
 
-        <h3 class="light-blue-text text-darken-1">Edit day template {{ selected_day_template.name }}</h3>
-        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'day_templates' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
-        <div class="card">
-            <form method="POST" action="{% url 'edit_day_template' selected_day_template.id %}">
-                {% csrf_token %}
-                <div class="card-content">
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">label</i>
-                            <label for="id_name">Name</label>
-                            <input type="text" name="name" autofocus autocapitalize="none" maxlength="30" value="{{ selected_day_template.name }}" required id="id_name" class="grey-text text-darken-4">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">local_offer</i>
-                            <label for="id_description">Description</label>
-                            <textarea name="description" autocapitalize="none" id="id_description" class="materialize-textarea grey-text text-darken-4">{{ selected_day_template.description }}</textarea>
-                        </div>
-                    </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Update day template</button>
-                    <a class="modal-trigger waves-effect waves-light btn-flat red-text text-darken-1" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
+    <form hx-post="{% url 'edit_day_template' selected_day_template.id %}" hx-target="#day-template-table" hx-swap="morph">
+        <div class="modal-content card-color">
+            {% csrf_token %}
+            <h5 class="header-color-text"><b>Edit Day template {{ selected_day_template.name }}</b></h5>
+            <div class="row" style="gap: 1em">
+                <div class="s6 input-field">
+                    <i class="material-icons prefix">label</i>
+                    <input id="id_name" name="name" type="text" autofocus autocapitalize="none" maxlength="30" value="{{ selected_day_template.name }}" placeholder=" " required>
+                    <label for="id_name">*Name</label>
                 </div>
-            </form>
-        </div>
-        <div class="card">
-            <div class="card-content">
-                <div class="card-title"><b>Assigned shift templates</b></div>
-                <table class="striped highlight responsive-table">
-                    <thead class="grey darken-1 white-text">
-                        <tr>
-                            <th>Name</th>
-                            <th>Start</th>
-                            <th>End</th>
-                            <th>Work hours<br>Break</th>
-                            <th>Department<br>Qualifications</th>
-                            <th>Note</th>
-                            <th>Remove</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for entry in associated_shift_templates %}
-                            <tr>
-                                <td>
-                                    {{ entry.shift_template.name }}
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.start_time|date:"H:i" }}
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.end_time|date:"H:i" }}
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.get_work_hours|date:"H:i" }}<br>
-                                    <span class="grey-text text-darken-1">{{ entry.shift_template.break_duration|date:"H:i" }}</span>
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.department }}<br>
-                                    {% for qualification in entry.shift_template.get_qualifications %}
-                                        <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
-                                            <b>{{ qualification.qualification.name }}</b>
-                                        </span>
-                                    {% endfor %}
-                                </td>
-                                <td>
-                                    {{ entry.shift_template.note }}
-                                </td>
-                                <td>
-                                    <a class="waves-effect waves-light btn red darken-1" href="{% url 'remove_shift_template' selected_day_template.id entry.shift_template.id %}"><i class="material-icons">close</i></a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-                <br>
-                <div class="row">
-                    <a data-target="add-shift-modal" class="modal-trigger waves-effect waves-light btn light-blue darken-1 right"><i class="material-icons left">add</i>Assign shift template</a>
+            </div><br>
+            <div class="row" style="gap: 1em">
+                <div class="s12 input-field">
+                    <i class="material-icons prefix">local_offer</i>
+                    <textarea id="id_description" name="description" autocapitalize="none" class="materialize-textarea" placeholder=" ">{{ selected_day_template.description }}</textarea>
+                    <label for="id_description">Description</label>
                 </div>
-                <img class="materialboxed" src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
-            </div>
+            </div><br>
         </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+        <div class="modal-footer header-color" style="margin-top: 10%">
+            <button type="submit" class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#edit-modal')).close();"><i class="material-icons left">edit</i>Update Day template</button>
+            <a class="modal-trigger waves-effect waves-light btn-flat white-text" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
+        </div>
+    </form>
+</div>
