--- a/templates/shiftTemplates/fragments/create_shift_template.html
+++ b/templates/shiftTemplates/fragments/create_shift_template.html
@@ -1,60 +1,56 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - Create shift template{% endblock %}
+<div id="add-modal">
+    <script>
+        var elem = document.getElementsByClassName('select-box');
+        var instance = M.FormSelect.init(elem);
+    </script>
 
-{% block content %}
-    {% if user.is_authorized %}
-        <h3 class="light-blue-text text-darken-1">Create shift template</h3>
-        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'shift_templates' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
-        <div class="card">
-            <form method="POST" action="{% url 'create_shift_template' %}">
-                {% csrf_token %}
-                <div class="card-content">
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">label</i>
-                            <label for="id_name">Name</label>
-                            <input type="text" name="name" autofocus autocapitalize="none" maxlength="30" required id="id_name" class="grey-text text-darken-4">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">local_offer</i>
-                            {{ form.department }}
-                            <label>Department</label>
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">schedule</i>
-                            <input id="id_start_time" name="start_time" type="time" value="12:00" required class="grey-text text-darken-4">
-                            <label for="id_start_time">Start</label>
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">schedule</i>
-                            <input id="id_end_time" name="end_time" type="time" value="18:00" required class="grey-text text-darken-4">
-                            <label for="id_end_time">End</label>
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">label</i>
-                            <label for="id_break_duration">Break</label>
-                            <input type="time" name="break_duration" autofocus autocapitalize="none" maxlength="30" value="00:30" required id="id_break_duration" class="grey-text text-darken-4">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">chat_bubble</i>
-                            <label for="id_note">Note</label>
-                            <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4"></textarea>
-                        </div>
-                    </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">add</i>Create shift template</button>
+    <form hx-post="{% url 'create_shift_template' %}" hx-target="#shift-template-table" hx-swap="morph">
+        <div class="modal-content card-color">
+            <h5 class="header-color-text"><b>Create Shift template</b></h5>
+            {% csrf_token %}
+            <div class="row" style="gap: 1em">
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">label</i>
+                    <input type="text" name="name" autofocus autocapitalize="none" maxlength="30" required id="id_name" placeholder=" ">
+                    <label for="id_name">*Name</label>
                 </div>
-            </form>
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">event_calendar</i>
+                    <select name="department" class="select-box">
+                        {% for department in form.department %}
+                            <option value="{{ department.data.value }}">{{ department.data.label }}</option>
+                        {% endfor %}
+                    </select>
+                    <label>*Department</label>
+                </div>
+            </div><br>
+            <div class="row" style="gap: 1em">
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">schedule</i>
+                    <input id="id_start_time" name="start_time" type="time" value="12:00" placeholder=" " required>
+                    <label for="id_start_time">*Start</label>
+                </div>
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">schedule</i>
+                    <input id="id_end_time" name="end_time" type="time" value="18:00" placeholder=" " required>
+                    <label for="id_end_time">*End</label>
+                </div>
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">label</i>
+                    <input id="id_break_duration" type="time" name="break_duration" autofocus autocapitalize="none" value="00:30" placeholder=" " required >
+                    <label for="id_break_duration">*Break</label>
+                </div>
+            </div><br>
+            <div class="row" style="gap: 1em">
+                <div class="s12 input-field">
+                    <i class="material-icons prefix">chat_bubble</i>
+                    <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4" placeholder=" "></textarea>
+                    <label for="id_note">Note</label>
+                </div>
+            </div>
         </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+        <div class="modal-footer header-color" style="margin-top: 10%">
+            <button type="submit" class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#add-modal')).close();"><i class="material-icons left">add</i>Create Shift template</button>
+        </div>
+    </form>
+</div>
