--- a/templates/shiftTemplates/fragments/edit_shift_template.html
+++ b/templates/shiftTemplates/fragments/edit_shift_template.html
@@ -1,98 +1,82 @@
-{% extends "base.html" %}
-{% block title %}ShiftManager - Edit shift template {{ selected_shift_template.name }}{% endblock %}
+<div id="edit-modal-content">
+    <script>
+        var elem = document.getElementsByClassName('select-box');
+        var instance = M.FormSelect.init(elem);
 
-{% block content %}
-    {% if user.is_authorized %}
-        <div id="delete-modal" class="modal content-section red darken-1 white-text">
-            <div class="modal-content">
-                <h5><b>Delete {{ selected_shift_template }}</b></h5>
-                <p>Are you sure you really want to delete {{ selected_shift_template }}? All assigned data will be gone forever and may cause corrupted past data. It is not advised to remove a shift template if day templates uses it.</p>
-            </div>
-            <div class="modal-footer">
-                <a class="modal-close waves-effect waves-light btn-flat red darken-1 white-text"><i class="material-icons left">close</i>Abort and close</a>
-                <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'delete_shift_template' selected_shift_template.id %}"><i class="material-icons left">delete_forever</i>Yes, delete anyway</a>
-            </div>
+        var picker_elems = document.querySelectorAll('.datepicker');
+        var picker_instances = M.Datepicker.init(picker_elems, {
+            format: 'yyyy-mm-dd',
+            firstDay: 1,
+            showClearBtn: true
+        });
+
+        var modal_elems = document.querySelector('#delete-modal');
+        var modal_instances = M.Modal.init(modal_elems);
+    </script>
+
+    <div id="delete-modal" class="modal content-section card-color">
+        <div class="modal-content">
+            <h5><b class="warning-color-text">Delete Shift template {{ selected_shift_template.name }}</b></h5>
+            <p>Are you sure you really want to delete this entry?</p>
         </div>
-
-        <div id="add-qualification-modal" class="modal content-section">
-            <div class="modal-content">
-                <h5 class="light-blue-text text-darken-1"><b>Add qualification to {{ selected_shift_template }}</b></h5>
-                {% for qualification in non_associated_qualifications %}
-                    <a class="chip light-blue darken-1 white-text z-depth-1" href="{% url 'add_shift_template_qualification' selected_shift_template.id qualification.id %}">{{ qualification }}</a>
-                {% endfor %}
-            </div>
+        <div class="modal-footer header-color">
+            <a class="modal-close waves-effect waves-light btn-flat white-text" onclick="M.Modal.getInstance(document.querySelector('#delete-modal')).close(); M.Modal.getInstance(document.querySelector('#edit-modal')).close();"><i class="material-icons left">close</i>Abort and close</a>
+            <a class="waves-effect waves-light btn warning-color white-text" onclick="M.Modal.getInstance(document.querySelector('#delete-modal')).close(); M.Modal.getInstance(document.querySelector('#edit-modal')).close();" hx-get="{% url 'delete_shift_template' selected_shift_template.id %}" hx-target="#shift-template-table" hx-swap="morph"><i class="material-icons left">delete_forever</i>Yes, delete</a>
         </div>
+    </div>
 
-        <h3 class="light-blue-text text-darken-1">Edit shift template {{ selected_shift_template.name }}</h3>
-        <a class="waves-effect waves-light btn amber darken-1 right" href="{% url 'shift_templates' %}"><i class="material-icons left">keyboard_backspace</i>Back</a><br><br>
-        <div class="card">
-            <form method="POST" action="{% url 'edit_shift_template' selected_shift_template.id %}">
-                {% csrf_token %}
-                <div class="card-content">
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">label</i>
-                            <label for="id_name">Name</label>
-                            <input type="text" name="name" autofocus autocapitalize="none" maxlength="30" required value="{{ selected_shift_template.name }}" id="id_name" class="grey-text text-darken-4">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">local_offer</i>
-                            <select name="department">
-                                {% for department in departments %}
-                                    <option value="{{ department.id }}" {% if selected_shift_template.department.name == department.name %}selected{% endif %}>{{ department.name }}</option>
-                                {% endfor %}
-                            </select>
-                            <label>Department</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">schedule</i>
-                            <input id="id_start_time" name="start_time" type="time" value="{{ selected_shift_template.start_time|date:"H:i" }}" required class="grey-text text-darken-4">
-                            <label for="id_start_time">Start</label>
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">schedule</i>
-                            <input id="id_end_time" name="end_time" type="time" value="{{ selected_shift_template.end_time|date:"H:i" }}" required class="grey-text text-darken-4">
-                            <label for="id_end_time">End</label>
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                        <div class="input-field col s4">
-                            <i class="material-icons prefix">label</i>
-                            <label for="id_break_duration">Break</label>
-                            <input type="time" name="break_duration" autofocus autocapitalize="none" maxlength="30" value="{{ selected_shift_template.break_duration|date:"H:i" }}" required id="id_break_duration" class="grey-text text-darken-4">
-                            <span class="helper-text grey-text text-lighten-1" data-error="wrong" data-success="right">required</span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">chat_bubble</i>
-                            <label for="id_note">Note</label>
-                            <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4">{{ selected_shift_template.note }}</textarea>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">tag</i>
-                            <div class="chips chips-initial">
-                                {% for entry in associated_qualifications %}
-                                    <a class="chip light-blue darken-1 white-text z-depth-1" href="{% url 'remove_shift_template_qualification' selected_shift_template.id entry.qualification.id %}">
-                                        {{ entry.qualification.name }} <i class="material-icons tiny">close</i>
-                                    </a>
-                                {% endfor %}
-                            </div>
-                            <span class="helper-text grey-text text-lighten-1">Qualifications</span>
-                        </div>
-                        <a data-target="add-qualification-modal" class="modal-trigger waves-effect waves-light btn light-blue darken-1 right"><i class="material-icons left">add</i>Add qualification</a>
-                    </div>
-                    <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">edit</i>Update shift template</button>
-                    <a class="modal-trigger waves-effect waves-light btn-flat red-text text-darken-1" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
+    <form hx-post="{% url 'edit_shift_template' selected_shift_template.id %}" hx-target="#shift-template-table" hx-swap="morph">
+        <div class="modal-content card-color">
+            {% csrf_token %}
+            <h5 class="header-color-text"><b>Edit Shift template {{ selected_shift_template.name }}</b></h5>
+            <div class="row" style="gap: 1em">
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">label</i>
+                    <input type="text" name="name" autofocus autocapitalize="none" maxlength="30" required value="{{ selected_shift_template.name }}" id="id_name" placeholder=" ">
+                    <label for="id_name">*Name</label>
                 </div>
-            </form>
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">local_offer</i>
+                    <select name="department" class="select-box">
+                        {% for department in departments %}
+                            <option value="{{ department.id }}" {% if selected_shift_template.department.name == department.name %}selected{% endif %}>{{ department.name }}</option>
+                        {% endfor %}
+                    </select>
+                    <label>*Department</label>
+                </div>
+            </div><br>
+            <div class="row" style="gap: 1em">
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">schedule</i>
+                    <input id="id_start_time" name="start_time" type="time" value="{{ selected_shift_template.start_time|date:"H:i" }}" placeholder=" " required>
+                    <label for="id_start_time">*Start</label>
+                </div>
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">schedule</i>
+                    <input id="id_end_time" name="end_time" type="time" value="{{ selected_shift_template.end_time|date:"H:i" }}" placeholder=" " required>
+                    <label for="id_end_time">*End</label>
+                </div>
+                <div class="s4 input-field">
+                    <i class="material-icons prefix">label</i>
+                    <input id="id_break_duration" type="time" name="break_duration" autofocus autocapitalize="none" value="{{ selected_shift_template.break_duration|date:"H:i" }}" placeholder=" " required>
+                    <label for="id_break_duration">*Break</label>
+                </div>
+            </div><br>
+            <div class="row" style="gap: 1em">
+                <div class="s12 input-field">
+                    <i class="material-icons prefix">chat_bubble</i>
+                    <textarea name="note" autocapitalize="none" id="id_note" class="materialize-textarea grey-text text-darken-4" placeholder=" ">{{ selected_shift_template.note }}</textarea>
+                    <label for="id_note">Note</label>
+                </div>
+            </div>
+            <h5><b class="header-color-text">Required Qualifications</b></h5>
+            <div id="loader" hx-get="{% url 'shift_template_qualifications' selected_shift_template.id %}" hx-trigger="load once" hx-target="#shift-template-qualifications" hx-swap="morph"></div>
+                <br><div id="shift-template-qualifications"></div>
+            </div>
+        <div class="modal-footer header-color" style="margin-top: 10%">
+            {% if user.is_admin %}<a class="modal-trigger btn-flat accent-color-text" data-target="add-qualification-modal"><i class="material-icons left">add</i>Add Qualification</a>{% endif %}
+            <button type="submit" class="waves-effect waves-light btn accent-color" onclick="M.Modal.getInstance(document.querySelector('#edit-modal')).close();"><i class="material-icons left">edit</i>Update Shift template</button>
+            <a class="modal-trigger waves-effect waves-light btn-flat white-text" data-target="delete-modal"><i class="material-icons left">delete_forever</i>Delete</a>
         </div>
-    {% else %}
-        {% include 'forbidden.html' %}
-    {% endif %}
-{% endblock %}
+    </form>
+</div>
