--- a/templates/shifts/fragments/own_shifts_search.html
+++ b/templates/shifts/fragments/own_shifts_search.html
@@ -3,8 +3,7 @@
         <thead class="header-color white-text">
             <tr>
                 <th>Date</th>
-                <th>Start</th>
-                <th>End</th>
+                <th>Start<br>End</th>
                 <th>Work hours<br>Break</th>
                 <th>Department<br>Qualifications</th>
                 <th>Note</th>
@@ -17,8 +16,7 @@
                     {{ entry.get_date|date:"l" }}<br>
                     <b>{{ entry.get_date|date:"d.m.Y" }}</b><br>
                 </td>
-                <td><b>{{ entry.get_start_time|date:"H:i" }}</b></td>
-                <td><b>{{ entry.get_end_time|date:"H:i" }}</b></td>
+                <td><b>{{ entry.get_start_time|date:"H:i" }}</b><br><b>{{ entry.get_end_time|date:"H:i" }}</b></td>
                 <td>{{ entry.get_work_hours|date:"H:i" }}<br><span class="grey-text text-darken-1">{{ entry.break_duration|date:"H:i" }}</span></td>
                 <td>
                     {% if entry.employee != None and entry.employee.department != entry.department %}
