shifts page reworked

--- a/templates/dayTemplates/fragments/day_template_detail.html
+++ b/templates/dayTemplates/fragments/day_template_detail.html
@@ -58,7 +58,7 @@
                 <div class="row" style="gap: 1em">
                     <div class="s8 input-field">
                         <i class="material-icons prefix">event_calendar</i>
-                        <input id="id_to_date" name="to_date" type="text" class="datepicker" required>
+                        <input id="id_to_date" name="to_date" type="text" class="datepicker" placeholder=" " required>
                         <label for="id_to_date">*Date</label>
                     </div>
                 </div>
