--- a/templates/shifts/shift_list.html
+++ b/templates/shifts/shift_list.html
@@ -3,126 +3,46 @@
 
 {% block content %}
     {% if user.is_authorized %}
-        <h3 class="light-blue-text text-darken-1">Shifts</h3>
-        <ul class="collapsible">
-            <li {% if search %}class="active"{% endif %}>
-                <div class="collapsible-header grey lighten-3"><i class="material-icons left">search</i>Search</div>
-                <div class="collapsible-body grey lighten-5">
-                    <form method="POST" action="{% url 'shifts' %}">
-                        {% csrf_token %}
-                        <div class="row">
-                            <div class="input-field col s6 m4">
+        <br><br><br>
+        <div id="add-modal" class="modal">
+            <div id="add-modal-content"></div>
+        </div>
+        <div id="edit-modal" class="modal">
+            <div id="edit-modal-content"></div>
+        </div>
+        <div id="employee-modal" class="modal">
+            <div id="employee-modal-content"></div>
+        </div>
+        <div id="qualification-modal" class="modal">
+            <div id="qualification-modal-content"></div>
+        </div>
+
+        <div id="qualification-content">
+            <form hx-post="{% url 'shifts' %}" hx-target="#shift-table" hx-swap="morph">
+                {% csrf_token %}
+                <div class="card card-color">
+                    <div class="card-content header-color">
+                        <div class="row" style="gap: 1em">
+                            <div class="s4 card-title"><b class="accent-color-text"><i class="material-icons left">view_list</i>Shifts</b></div>
+                            <div class="s4 input-field">
                                 <i class="material-icons prefix">event_calendar</i>
-                                <input id="id_filter_date" name="filter_date" type="text" {% if data.filter_date %}value="{{ data.filter_date }}"{% endif %} class="datepicker grey-text text-darken-4">
+                                <input id="id_filter_date" name="filter_date" type="text" {% if data.filter_date %}value="{{ data.filter_date }}"{% endif %} class="datepicker" hx-post="{% url 'shifts' %}" hx-trigger="change" hx-target="#shift-table" hx-swap="morph">
                                 <label for="id_filter_date">Filter date</label>
                             </div>
-                            <div class="input-field col s6 m4">
+                            <div class="s4 input-field">
                                 <i class="material-icons prefix">search</i>
-                                <input id="id_keyword" type="search" name="keyword" {% if data.keyword %}value="{{ data.keyword }}"{% endif %}>
+                                <input id="id_keyword" type="search" name="keyword" placeholder=" " hx-post="{% url 'shifts' %}" hx-trigger="keyup delay:250ms" hx-target="#shift-table" hx-swap="morph">
                                 <label for="id_keyword">Keyword</label>
                             </div>
                         </div>
-                        <button type="submit" class="waves-effect waves-light btn light-blue darken-1"><i class="material-icons left">search</i>Search</button>
-                        {% if search %}
-                            <a class="waves-effect waves-light btn-flat red-text text-darken-1" href="{% url 'shifts' %}"><i class="material-icons left">clear</i>Clear</a>
-                        {% endif %}
-                    </form>
-                </div>
-            </li>
-        </ul>
-
-        <a class="waves-effect waves-light btn light-blue darken-1 right" href="{% url 'create_shift' %}"><i class="material-icons left">add</i>Create shift</a><br><br>
-        <div class="card">
-            <div class="card-content">
-                <table class="striped highlight responsive-table">
-                    <thead class="grey darken-1 white-text">
-                        <tr>
-                            <th>Date<br>Time</th>
-                            <th>Work hours<br>Break</th>
-                            <th>Qualifications</th>
-                            <th>Department</th>
-                            <th>Employee</th>
-                            <th>Note</th>
-                            <th>Edit</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for entry in page_obj %}
-                        <tr {% if entry.highlight %}class="amber lighten-3"{% endif %}>
-                            <td>
-                                {{ entry.get_date|date:"l" }}<br>
-                                <b>{{ entry.get_date|date:"d.m.Y" }}</b><br>
-                                <b>{{ entry.get_start_time|date:"H:i" }} - {{ entry.get_end_time|date:"H:i" }}</b>
-                            </td>
-                            <td>{{ entry.get_work_hours|date:"H:i" }}<br><span class="grey-text text-darken-1">{{ entry.break_duration|date:"H:i" }}</span></td>
-                            <td>
-                                {% for qualification in entry.get_qualifications %}
-                                    <span class="new badge amber darken-1 black-text z-depth-1" data-badge-caption="">
-                                        <b>{{ qualification.qualification.name }}</b>
-                                    </span><br>
-                                {% endfor %}
-                            </td>
-                            <td>
-                                {% if entry.employee != None and entry.employee.department != entry.department %}
-                                    <span class="new badge red darken-1 z-depth-1" data-badge-caption="">
-                                        <b>{{ entry.department }}</b>
-                                    </span>
-                                {% else %}
-                                    {{ entry.department }}
-                                {% endif %}
-                            </td>
-                            <td>
-                                {{ entry.employee.first_name }}<br>
-                                <b>{{ entry.employee.last_name }}</b><br>
-                                {% if entry.employee != None and entry.employee.department != entry.department %}
-                                    <span class="new badge red darken-1 z-depth-1" data-badge-caption="">
-                                        <b>{{ entry.employee.department }}</b>
-                                    </span>
-                                {% endif %}
-                            </td>
-                            <td>{{ entry.note }}</td>
-                            <td>
-                                <a class="waves-effect waves-light btn amber darken-1" href="{% url 'edit_shift' entry.id %}"><i class="material-icons">edit</i></a>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-                {% if timeline %}
-                    <br><img class="materialboxed" src='data:image/png;base64,{{ timeline }}' style="max-width: 100%">
-                {% endif %}
-            </div>
+                        <div id="loader" hx-post="{% url 'shifts' %}" hx-trigger="load once" hx-target="#shift-table" hx-swap="morph"></div>
+                        <br>
+                        <a class="modal-trigger btn-floating accent-color white-text right" data-target="add-modal" hx-get="{% url 'create_shift' %}" hx-target="#add-modal" hx-swap="morph"><i class="material-icons left">add</i></a>
+                    </div><br>
+                    <div id="shift-table"></div>
+                </div><br>
+            </form>
         </div>
-
-        {% if demand %}
-            <div class="card">
-                <div class="card-content">
-                    <div class="card-title"><b>Demand</b> (Employees needed in timeframe per department)</div>
-                    <img class="materialboxed" src='data:image/png;base64,{{ demand }}' style="max-width: 100%">
-                </div>
-            </div>
-        {% endif %}
-
-        <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
-        <ul class="pagination center">
-            {% if page_obj.has_previous %}
-                <li class="waves-effect"><a href="?page={{ page_obj.previous_page_number }}"><i class="material-icons">chevron_left</i></a></li>
-            {% else %}
-                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_left</i></a></li>
-            {% endif %}
-            {% for page in page_obj.paginator.page_range %}
-                {% if page == page_obj.number %}
-                    <li class="active light-blue darken-1"><a>{{ page_obj.number }}</a></li>
-                {% else %}
-                    <li class="waves-effect"><a href="?page={{ page }}">{{ page }}</a></li>
-                {% endif %}
-            {% endfor %}
-            {% if page_obj.has_next %}
-                <li class="waves-effect"><a href="?page={{ page_obj.next_page_number }}"><i class="material-icons">chevron_right</i></a></li>
-            {% else %}
-                <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
-            {% endif %}
-        </ul>
     {% else %}
         {% include 'forbidden.html' %}
     {% endif %}
