--- a/templates/availabilities/fragments/edit_availability.html
+++ b/templates/availabilities/fragments/edit_availability.html
@@ -35,12 +35,12 @@
                 <div class="s4 input-field">
                     <i class="material-icons prefix">person</i>
                     <input type="text" autocapitalize="none" maxlength="25" disabled value="{{ selected_availability.employee }}" id="id_employee" class="grey-text text-lighten-1" placeholder=" ">
-                    <label>*Employee</label>
+                    <label>*Employee<i class="material-icons right accent-color-text">lock</i></label>
                 </div>
                 <div class="s4 input-field">
                     <i class="material-icons prefix">local_offer</i>
                     <input type="text" autocapitalize="none" maxlength="25" disabled value="{{ selected_availability.get_weekday_display }}" id="id_weekday" class="grey-text text-lighten-1" placeholder=" ">
-                    <label>*Weekday</label>
+                    <label>*Weekday<i class="material-icons right accent-color-text">lock</i></label>
                 </div>
                 <div class="s2 input-field">
                     <label>
