--- a/templates/dayTemplates/fragments/day_template_table.html
+++ b/templates/dayTemplates/fragments/day_template_table.html
@@ -24,6 +24,7 @@
     </table><br>
 
     <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
+    {% if page_obj.paginator.num_pages > 1 %}
     <ul class="pagination center">
         {% if page_obj.has_previous %}
             <li class="waves-effect"><a hx-post="{% url 'day_templates' %}?page={{ page_obj.previous_page_number }}" hx-target="#day-template-table" hx-swap="morph"><i class="material-icons">chevron_left</i></a></li>
@@ -43,4 +44,5 @@
             <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
         {% endif %}
     </ul>
+    {% endif %}
 </div>
