--- a/templates/holidays/fragments/holiday-table.html
+++ b/templates/holidays/fragments/holiday-table.html
@@ -42,6 +42,7 @@
             </table><br>
 
             <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
+            {% if page_obj.paginator.num_pages > 1 %}
             <ul class="pagination center">
                 {% if page_obj.has_previous %}
                     <li class="waves-effect"><a hx-post="{% url 'holidays' %}?page={{ page_obj.previous_page_number }}" hx-target="#holiday-table" hx-swap="morph"><i class="material-icons">chevron_left</i></a></li>
@@ -61,6 +62,7 @@
                     <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
                 {% endif %}
             </ul>
+            {% endif %}
         {% else %}
             <h6><i class="material-icons accent-color-text left">info</i>No holidays in selected timeframe and/or with matching keyword</h6>
         {% endif %}
