--- a/templates/wishes/fragments/edit_wish.html
+++ b/templates/wishes/fragments/edit_wish.html
@@ -35,12 +35,12 @@
                 <div class="s4 input-field">
                     <i class="material-icons prefix">person</i>
                     <input type="text" autocapitalize="none" maxlength="25" disabled value="{{ selected_wish.employee }}" id="id_employee" placeholder=" ">
-                    <label>*Employee</label>
+                    <label>*Employee<i class="material-icons right accent-color-text">lock</i></label>
                 </div>
                 <div class="s4 input-field">
                     <i class="material-icons prefix">event_calendar</i>
                     <input type="text" autocapitalize="none" maxlength="25" disabled value="{{ selected_wish.date|date:"Y-m-d" }}" id="id_date" placeholder=" ">
-                    <label for="id_date">*Date</label>
+                    <label for="id_date">*Date<i class="material-icons right accent-color-text">lock</i></label>
                 </div>
                 <div class="s2 input-field">
                     <label>
