--- a/templates/demand/fragments/demand_table.html
+++ b/templates/demand/fragments/demand_table.html
@@ -32,6 +32,7 @@
     {% endif %}
 
     <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
+    {% if page_obj.paginator.num_pages > 1 %}
     <ul class="pagination center">
         {% if page_obj.has_previous %}
             <li class="waves-effect"><a hx-post="{% url 'demand' %}?page={{ page_obj.previous_page_number }}" hx-target="#demand-table" hx-swap="morph"><i class="material-icons">chevron_left</i></a></li>
@@ -51,4 +52,5 @@
             <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
         {% endif %}
     </ul>
+    {% endif %}
 </div>
