--- a/templates/departments/fragments/department_table.html
+++ b/templates/departments/fragments/department_table.html
@@ -48,6 +48,7 @@
     </table><br>
 
     <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries.count }} entries)</span>
+    {% if page_obj.paginator.num_pages > 1 %}
     <ul class="pagination center">
         {% if page_obj.has_previous %}
             <li class="waves-effect"><a hx-post="{% url 'departments' %}?page={{ page_obj.previous_page_number }}" hx-target="#department-table" hx-swap="morph"><i class="material-icons">chevron_left</i></a></li>
@@ -67,4 +68,5 @@
             <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
         {% endif %}
     </ul>
+    {% endif %}
 </div>
