--- a/templates/qualifications/fragments/qualification_table.html
+++ b/templates/qualifications/fragments/qualification_table.html
@@ -40,6 +40,7 @@
     </table><br>
 
     <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries.count }} entries)</span>
+    {% if page_obj.paginator.num_pages > 1 %}
     <ul class="pagination center">
         {% if page_obj.has_previous %}
             <li class="waves-effect"><a hx-post="{% url 'qualifications' %}?page={{ page_obj.previous_page_number }}" hx-target="#qualification-table" hx-swap="morph"><i class="material-icons">chevron_left</i></a></li>
@@ -59,4 +60,5 @@
             <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
         {% endif %}
     </ul>
+    {% endif %}
 </div>
