--- a/templates/shiftTemplates/fragments/shift_template_table.html
+++ b/templates/shiftTemplates/fragments/shift_template_table.html
@@ -34,6 +34,7 @@
     </table><br>
 
     <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
+    {% if page_obj.paginator.num_pages > 1 %}
     <ul class="pagination center">
         {% if page_obj.has_previous %}
             <li class="waves-effect"><a hx-post="{% url 'shift_templates' %}?page={{ page_obj.previous_page_number }}" hx-target="#shift-template-table" hx-swap="morph"><i class="material-icons">chevron_left</i></a></li>
@@ -53,4 +54,5 @@
             <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
         {% endif %}
     </ul>
+    {% endif %}
 </div>
