--- a/templates/users/fragments/employee_table.html
+++ b/templates/users/fragments/employee_table.html
@@ -42,9 +42,10 @@
             </tr>
         {% endfor %}
         </tbody>
-    </table>
+    </table><br>
 
     <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} ({{ entries }} entries)</span>
+    {% if page_obj.paginator.num_pages > 1 %}
     <ul class="pagination center">
         {% if page_obj.has_previous %}
             <li class="waves-effect"><a hx-post="{% url 'employees' %}?page={{ page_obj.previous_page_number }}" hx-target="#employee-table" hx-swap="morph"><i class="material-icons">chevron_left</i></a></li>
@@ -64,4 +65,5 @@
             <li class="disabled grey-text text-lighten-1"><a><i class="material-icons">chevron_right</i></a></li>
         {% endif %}
     </ul>
+    {% endif %}
 </div>
